--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "chainlink_betting_game",
+  "name": "game",
   "version": "0.1.0",
   "description": "Betting Game",
-  "author": "github.com/xternet",
+  "author": "vatsal",
   "homepage": ".",
   "dependencies": {
     "babel-polyfill": "6.26.0",
